--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
     "@types/readable-stream": "2.3.9",
     "@types/browser-or-node": "^1.2.0"
   },
+  "resolutions": {
+    "graceful-fs": "^4.2.4"
+  },
   "files": [
     "dist/**"
   ],
